<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.lv1871.oss</groupId>
	<artifactId>dmnmgr-project</artifactId>
	<version>1.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>dmnmgr-project</name>
	<url>http://maven.apache.org</url>

	<modules>
		<module>dmnmgr-tester</module>
		<module>dmnmgr-test-driver</module>
		<module>dmnmgr</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<version.compiler.plugin>3.1</version.compiler.plugin>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<version.maven.release.plugin>2.5.3</version.maven.release.plugin>
		<camunda.version>7.11.0</camunda.version>
		<spin.version>1.3.0</spin.version>
		<spring.boot.maven.plugin>2.2.5.RELEASE</spring.boot.maven.plugin>
		<camunda.dmn.plugin.version>1.3.1</camunda.dmn.plugin.version>
		<camunda.test.mockito.version>2.1</camunda.test.mockito.version>
		<camunda.test.assert.version>1.2</camunda.test.assert.version>
		<springframework.boot.version>2.2.0.RELEASE</springframework.boot.version>
		<junit.version>4.12</junit.version>
		<jackson.version>2.10.0</jackson.version>
		<swagger.version>2.5.0</swagger.version>
		<h2.version>1.4.193</h2.version>
		<feel.scala.version>1.10.1</feel.scala.version>
		<redsix.dmn-check.version>1.1.3</redsix.dmn-check.version>
	</properties>

	<scm>
		<url>https://github.com/davidibl/dmnmgr-server</url>
		<connection>scm:git:git://github.com:davidibl/dmnmgr-server.git</connection>
		<developerConnection>scm:git:git@github.com:davidibl/dmnmgr-server.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<organization>
        <name>LV 1871</name>
        <url>https://lv1871.de/</url>
    </organization>

    <developers>
        <developer>
            <name>David Ibl</name>
        </developer>
	</developers>
	
	<licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

	<dependencyManagement>
		<dependencies>

			<!-- Camunda dependencies -->
			<dependency>
				<groupId>org.camunda.bpm.dmn</groupId>
				<artifactId>camunda-engine-dmn</artifactId>
				<version>${camunda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.camunda.bpm</groupId>
				<artifactId>camunda-engine</artifactId>
				<version>${camunda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.camunda.bpm.extension.dmn.scala</groupId>
				<artifactId>dmn-engine-camunda-plugin</artifactId>
				<version>${camunda.dmn.plugin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.camunda.bpm.extension.feel.scala</groupId>
				<artifactId>feel-engine-plugin</artifactId>
				<version>${feel.scala.version}</version>
			</dependency>
			<dependency>
				<groupId>org.camunda.bpm.extension.feel.scala</groupId>
				<artifactId>feel-engine-factory</artifactId>
				<version>${feel.scala.version}</version>
			</dependency>
			<dependency>
				<groupId>org.camunda.bpm.extension.feel.scala</groupId>
				<artifactId>feel-engine</artifactId>
				<version>${feel.scala.version}</version>
			</dependency>

			<!-- Spring -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-configuration-processor</artifactId>
				<optional>true</optional>
				<version>${springframework.boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-web</artifactId>
				<version>${springframework.boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-logging</artifactId>
				<version>${springframework.boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-actuator</artifactId>
				<version>${springframework.boot.version}</version>
			</dependency>

			<!-- Jackson -->
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- Common -->
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>de.redsix</groupId>
				<artifactId>dmn-check</artifactId>
				<version>${redsix.dmn-check.version}</version>
			</dependency>
			<dependency>
				<groupId>de.redsix</groupId>
				<artifactId>dmn-check-core</artifactId>
				<version>${redsix.dmn-check.version}</version>
			</dependency>
			<dependency>
				<groupId>de.redsix</groupId>
				<artifactId>dmn-check-validators</artifactId>
				<version>${redsix.dmn-check.version}</version>
			</dependency>

			<!-- Testing -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>